[project]
name = "qi-harness"
version = "0.1.0"
description = "Harness and graph generator for qi-number validator"
author = "David Berthiaume"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qi_harness"]
